--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Alitic</string>
+    <string name="save">SAVE</string>
+    <string name="cancel">Cancel</string>
 </resources>
