--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,9 +29,8 @@
     <string name="menu_detail">Analyse détaillée</string>
     <string name="menu_info">Informations</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="evolution">Evolution</string>
-
-
+    <string name="chronology">Chronologie</string>
+    <string name="detail_per_food_title">Detail par aliment</string>
+    <string name="all_event_types">Tous types</string>
 </resources>
