--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,33 @@
     <string name="chronology">Chronologie</string>
     <string name="detail_per_food_title">Detail par aliment</string>
     <string name="all_event_types">Tous types</string>
+
+    <string name="name_addeventtype">Entrer un type de ressenti</string>
+    <string name="time_occurrence_add_eventtype">Temps d\'apparition du ressenti après repas</string>
+    <string name="name_addfood">Entrer un nom</string>
+    <string name="addfood">Ajouter un aliment</string>
+    <string name="addeventtype">Ajouter un ressenti</string>
+    <string name="foodtype_addfood">Type d\'aliment:</string>
+    <string name="take_into_account_addfood">Prendre en compte pour l\'analyse ?</string>
+    <string name="take_last_meal_add_eventtype">Prendre dernier repas avant apparition</string>
+    <string name="select_period_add_eventtype">Sélectionner période d\'apparition après un repas</string>
+    <string name="select_period_add_eventtype1">Ressenti apparaissant entre </string>
+    <string name="select_period_add_eventtype2">h et</string>
+    <string name="select_period_add_eventtype3">h après un repas.</string>
+    <string name="select_foodtype_addfood">Selectionner un type d\'aliment</string>
+
+    <string name="eventtype_default_pic">EventTypeDefaultPic</string>
+
+    <string name="save_add_eventtype">Ressenti sauvegardé avec succès</string>
+    <string name="save_add_food">Aliment sauvegardé avec succès</string>
+
+    <string name="error_food_already_in_db">Aliment déjà présent dans le catalogue. Choisir un autre nom.</string>
+    <string name="error_food_without_name">Donner un nom à l\'aliment.</string>
+    <string name="error_food_without_foodtype">Choisir un type d\'aliment dans la liste.</string>
+
+    <string name="error_event_already_in_db">Ressenti déjà présent dans le catalogue. Choisir un autre nom.</string>
+    <string name="error_event_without_name">Donner un nom au ressenti.</string>
+
+
+
 </resources>
