--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,10 +20,16 @@
     <string name="save_abort_message_dialog">Renseignez une date et une heure svp.</string>
 
     <string name="error_save_meal">Il n\'y a pas de repas à sauvegarder. Choisir des aliments dans la liste.</string>
-    <string name="error_save_event">Il n\'y a pas de ressenti à sauvegarder. Choisir un ou plusieurs ressentis dans la liste.</string>
+    <string name="error_save_event">Il n\'y a pas de ressenti à sauvegarder. Choisir un ou plusieurs ressentis dans la
+        liste.
+    </string>
 
-    <string name="error_cancel_meal">Etes-vous sûr de quitter la sélection d\'un repas ? Les données renseignées seront perdues.</string>
-    <string name="error_cancel_event">Etes-vous sûr de quitter la sélection d\'un ressenti ? Les données renseignées seront perdues.</string>
+    <string name="error_cancel_meal">Etes-vous sûr de quitter la sélection d\'un repas ? Les données renseignées seront
+        perdues.
+    </string>
+    <string name="error_cancel_event">Etes-vous sûr de quitter la sélection d\'un ressenti ? Les données renseignées
+        seront perdues.
+    </string>
     <string name="error_cancel_meal_title">Quitter</string>
     <string name="error_cancel_event_title">Quitter</string>
 
@@ -90,7 +96,7 @@
     <string name="take_into_account_addfood">Prendre en compte pour l\'analyse ?</string>
     <string name="take_last_meal_add_eventtype">Prendre dernier repas avant apparition</string>
     <string name="select_period_add_eventtype">Sélectionner période d\'apparition après un repas</string>
-    <string name="select_period_add_eventtype1">Ressenti apparaissant entre </string>
+    <string name="select_period_add_eventtype1">Ressenti apparaissant entre</string>
     <string name="select_period_add_eventtype2">h et</string>
     <string name="select_period_add_eventtype3">h après un repas.</string>
     <string name="select_foodtype_addfood">Sselect_period_add_eventtypeelectionner un type d\'aliment</string>
@@ -112,7 +118,9 @@
 
     <string name="error_event_already_in_db">Ressenti déjà présent dans le catalogue. Choisir un autre nom.</string>
     <string name="error_event_without_name">Donner un nom au ressenti.</string>
-    <string name="error_event_with_wrong_range">La période sélectionnée (0h, 0h) n\' a pas de sens. Sélectionner un période plus large.</string>
+    <string name="error_event_with_wrong_range">La période sélectionnée (0h, 0h) n\' a pas de sens. Sélectionner un
+        période plus large.
+    </string>
 
     <!--SETTINGS MENU -->
     <string name="title_settings">Paramètres</string>
@@ -121,7 +129,9 @@
     <string name="permission_write">Donner permission pour sauvegarder fichier excel dans Downloads.</string>
     <string name="permission_denied">Sans permission, les données ne peuvent pas être exportées sous excel.</string>
     <string name="replace_excel_file_title">Exporter données sous Excel</string>
-    <string name="replace_excel_file_message" tools:ignore="Typos">Un fichier excel avec le même nom existe déjà. Remplacer le fichier existant ?</string>
+    <string name="replace_excel_file_message" tools:ignore="Typos">Un fichier excel avec le même nom existe déjà.
+        Remplacer le fichier existant ?
+    </string>
     <string name="excel_file_name">Données_Alitic.xls</string>
 
     <string name="col_date_meal">Date Repas</string>
@@ -137,7 +147,11 @@
     <string name="file_excel_not_created">Fichier excel non créé. Erreur:</string>
     <string name="reset_data">Reset des données</string>
     <string name="reset">RAZ</string>
-    <string name="confirmation_data_reset">Etes-vous sûr de vouloir supprimer tous les ressentis et repas de la base de données? Les données seront définitivement perdues. Avant suppression, vous avez la possibilité d\'exporter les données sous excel dans le menu paramètres. \n \n Les aliments et types de ressenti ajoutés ne seront pas supprimés.</string>
+    <string name="confirmation_data_reset">Etes-vous sûr de vouloir supprimer tous les ressentis et repas de la base de
+        données? Les données seront définitivement perdues. Avant suppression, vous avez la possibilité d\'exporter les
+        données sous excel dans le menu paramètres. \n \n Les aliments et types de ressenti ajoutés ne seront pas
+        supprimés.
+    </string>
     <string name="data_reset">Tous les ressentis et repas ont été supprimés de la base de données.</string>
     <string name="data_saved">Données sauvegardées!</string>
 
